修改知识库页面中的javascript

--- a/app/views/skm/file_managements/batch_new.html.erb
+++ b/app/views/skm/file_managements/batch_new.html.erb
@@ -105,28 +105,24 @@
   var line_count = 5;
   
   function save(){
-    document.file_form.action = "batch_create";
-    document.file_form.submit();
+      document.file_form.action = "batch_create";
+      document.file_form.submit();
   }
- function delete_line(l)
- {
-      GY.use(function(Y){
-          Y.one("#file_" + l).remove();
-      })
+  function delete_line(l)
+  {
+      $("#file_" + l).remove();
   }
   function generate_line()
   {
-      GY.use(function(Y){
-          var node = Y.Node.create('<tr id="file_' + line_count + '">'
-                  + '<td class="dataCol"></td>'
-                  + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
-                  + '<td class="dataCol"><input type="file" required="required" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
-                  + '<td class="dataCol"><select required="required" name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= options_for_select(available_file_categories).gsub!(/\n+/, "")%>' + '</select></td>'
-                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35"></td>'
-                  + '<td class="dataCol"><input type="checkbox" value="1" name="file[' + line_count + '][private_flag]" id="file_' + line_count + '_private_flag"></td>'
-                  + '</tr>');
-          Y.one("#file_body").appendChild(node);
-      });
+      var node = $('<tr id="file_' + line_count + '">'
+              + '<td class="dataCol"></td>'
+              + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
+              + '<td class="dataCol"><input type="file" required="required" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
+              + '<td class="dataCol"><select required="required" name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= options_for_select(available_file_categories).gsub!(/\n+/, "")%>' + '</select></td>'
+              + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35"></td>'
+              + '<td class="dataCol"><input type="checkbox" value="1" name="file[' + line_count + '][private_flag]" id="file_' + line_count + '_private_flag"></td>'
+              + '</tr>');
+      $("#file_body").append(node);
       line_count ++;
   }
 </script>
