--- a/app/views/skm/file_managements/edit.html.erb
+++ b/app/views/skm/file_managements/edit.html.erb
@@ -77,9 +77,7 @@
 
   function clear_file()
   {
-      GY.use(function(Y) {
-          Y.one("#file_0_file").set("value", "")
-      })
+      $("#file_0_file").set("value", "")
   }
 </script>
 <% end %>
