--- a/app/views/skm/entry_headers/remove_exits_attachment_during_create.js.erb
+++ b/app/views/skm/entry_headers/remove_exits_attachment_during_create.js.erb
@@ -1,3 +1,1 @@
-GY.use('node', function(Y){
-    Y.one("#exist_attachments_list").set('innerHTML', '<%= escape_javascript(list_exist_attachments_during_create(@attachments))%>');
-});
+$("#exist_attachments_list").html('<%= escape_javascript(list_exist_attachments_during_create(@attachments))%>');
