--- a/app/views/skm/entry_headers/_edit_form.html.erb
+++ b/app/views/skm/entry_headers/_edit_form.html.erb
@@ -136,11 +136,11 @@
   function submit_draft(){
     if (confirm("文章内容已被修改，是否保存为新的版本？"))
     {
-        document.edit_form.action = "update?status=DRAFT&new=1";
+        document.edit_form.action = "<%= url_for(:controller => 'skm/entry_headers', :action => 'update', :status => "DRAFT", :new => "1")%>";
     }
     else
     {
-        document.edit_form.action = "update?status=DRAFT";
+        document.edit_form.action = "<%= url_for(:controller => 'skm/entry_headers', :action => 'update', :status => "DRAFT")%>";
     }
     document.edit_form.submit();
   }
@@ -148,11 +148,11 @@
   function submit_published(){
     if (confirm("文章内容已被修改，是否保存为新的版本？"))
     {
-        document.edit_form.action = "update?status=PUBLISHED&new=1";
+        document.edit_form.action = document.edit_form.action = "<%= url_for(:controller => 'skm/entry_headers', :action => 'update', :status => "PUBLISHED", :new => "1")%>";
     }
     else
     {
-        document.edit_form.action = "update?status=PUBLISHED";
+        document.edit_form.action = "<%= url_for(:controller => 'skm/entry_headers', :action => 'update', :status => "PUBLISHED")%>";
     }
     document.edit_form.submit();
   }
