修正表格导出按钮不能导出数据的BUG

--- a/app/views/irm/my_login_history/get_login_data.html.erb
+++ b/app/views/irm/my_login_history/get_login_data.html.erb
@@ -41,12 +41,12 @@
            </td>
            <td>
              <div>
-               <%= data[:login_at] %>
+               <%= format_date(data[:login_at]) %>
              </div>
            </td>
            <td>
              <div>
-               <%= data[:logout_at] %>
+               <%= format_date(data[:logout_at]) %>
              </div>
            </td>
          </tr>
