--- a/app/views/irm/wf_approval_processes/_active_processes.html.erb
+++ b/app/views/irm/wf_approval_processes/_active_processes.html.erb
@@ -1,24 +1,24 @@
 <% if processes.any? %>
 <div class="datatable">
-  <div class="yui3-widget yui3-datatable">
-    <div class="yui3-datatable-content">
-        <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-          <thead class="yui3-datatable-columns">
-            <tr class="yui3-datatable-first yui3-datatable-last">
-              <th class="yui3-column" style="width:40px;">
-                <div class="yui3-datatable-liner"><%= t(:operation) %>
+  <div class="irm-datatable">
+    <div>
+        <table id='rows' >
+          <thead>
+            <tr>
+              <th style="width:40px;">
+                <div><%= t(:operation) %>
                 </div>
               </th>
-              <th class="yui3-column" style="width:80px;">
-                <div class="yui3-datatable-liner"><%= t(:label_irm_wf_approval_process_process_order) %>
+              <th style="width:80px;">
+                <div><%= t(:label_irm_wf_approval_process_process_order) %>
                 </div>
               </th>
-              <th class="yui3-column" style="width:25%">
-                <div class="yui3-datatable-liner"><%= t(:label_irm_wf_approval_process_name) %>
+              <th style="width:25%">
+                <div><%= t(:label_irm_wf_approval_process_name) %>
                 </div>
               </th>
-              <th class="yui3-column" style="width:60%">
-                <div class="yui3-datatable-liner"><%= t(:label_irm_wf_approval_process_description) %>
+              <th style="width:60%">
+                <div><%= t(:label_irm_wf_approval_process_description) %>
                 </div>
               </th>
             </tr>
@@ -26,23 +26,23 @@
           <tbody class="yui3-datatable-data">
           <% processes.each do |process| %>
           <tr id="<%=process.id%>" class="yui3-datatable-even">
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                 <%= link_to(t(:disable),{:action=>"active",:id=>process.id,:active=>Irm::Constant::SYS_NO,:back_url=>url_for({})}) %>
                </div>
             </td>
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                   <%= text_field_tag("process_orders[#{process.id}]",process.process_order,:size=>5) %>
                </div>
             </td>
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                   <%= link_to(process.name,{:action=>"show",:id=>process.id},:back_url=>url_for({})) %>
                </div>
             </td>
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                 <%= process.description %>
               </div>
             </td>
