--- a/app/views/irm/wf_approval_processes/_ap_step_approval_actions.html.erb
+++ b/app/views/irm/wf_approval_processes/_ap_step_approval_actions.html.erb
@@ -21,7 +21,7 @@
                         <span><a><%= t(:label_irm_wf_approval_add_actions)  %></a></span>
                         <script type="text/javascript">
                               $(function(){
-                                  $("#createApStepApprovalAction").menubutton();
+                                  $("#createApStepApprovalAction<%= step_id%>").menubutton();
                               });
                         </script>
                         <% else %>
