--- a/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
+++ b/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
@@ -20,7 +20,7 @@
                         </span>
                         <script type="text/javascript">
                               $(function(){
-                                  $("#createApRecallAction").menubutton();
+                                  $("#createApSubmitAction").menubutton();
                               });
                         </script>
                     </div>
