--- a/app/views/irm/wf_approval_processes/_edit_step_3.html.erb
+++ b/app/views/irm/wf_approval_processes/_edit_step_3.html.erb
@@ -49,7 +49,7 @@
                     <td class="dataCol" colspan="3" style="width:82%">
                       <% available_wf_process_editability.each_with_index do |ability,index| %>
                         <div>
-                          <%=f.radio_button :record_editability, ability[1],{:id=>"editability_#{index}"}%>
+                          <%=f.radio_button :record_editability, ability[1],{:id=>"editability_#{index}",:class=>"recordEdit"}%>
                           <label for="editability_<%= index %>"> <%= ability[0] %> </label>
                         </div>
                       <% end %>
@@ -80,3 +80,8 @@
   </div>
 </div>
 <%end%>
+<script type="text/javascript">
+  $(function(){
+      $.checkRadioButton("input.recordEdit");
+  });
+</script>
