--- a/app/views/irm/wf_approval_processes/_show_process_actions.html.erb
+++ b/app/views/irm/wf_approval_processes/_show_process_actions.html.erb
@@ -1,20 +1,20 @@
 <% if actions.any? %>
 <div class="datatable">
-  <div class="yui3-widget yui3-datatable">
-    <div class="yui3-datatable-content">
-        <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-          <thead class="yui3-datatable-columns">
-            <tr class="yui3-datatable-first yui3-datatable-last">
-              <th class="yui3-column" style="width:40px;">
-                <div class="yui3-datatable-liner"><%= t(:operation) %>
+  <div class="irm-datatable">
+    <div>
+        <table id='rows' >
+          <thead>
+            <tr>
+              <th style="width:40px;">
+                <div><%= t(:operation) %>
                 </div>
               </th>
-              <th class="yui3-column" style="width:40px;">
-                <div class="yui3-datatable-liner"><%= t(:label_irm_wf_rule_action_type) %>
+              <th style="width:40px;">
+                <div><%= t(:label_irm_wf_rule_action_type) %>
                 </div>
               </th>
-              <th class="yui3-column" style="width:180px;">
-                <div class="yui3-datatable-liner"><%= t(:label_irm_wf_rule_action_description) %>
+              <th style="width:180px;">
+                <div><%= t(:label_irm_wf_rule_action_description) %>
                 </div>
               </th>
             </tr>
@@ -22,8 +22,8 @@
           <tbody class="yui3-datatable-data">
           <% actions.each do |action| %>
           <tr id="<%=action[:action].id%>" class="yui3-datatable-even">
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                 <%= link_to(t(:edit),action[:edit_url_options]) %>
                 <% unless @wf_approval_process.enabled? %>
                     <%= link_to(t(:delete),action[:delete_url_options],{:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
@@ -32,13 +32,13 @@
                 <% end %>
                </div>
             </td>
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                   <%= action[:action_type_name] %>
                </div>
             </td>
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                 <%= link_to(action[:ref_action].name,action[:show_url_options]) %>
               </div>
             </td>
