--- a/app/views/csi/surveys/show_reply.html.erb
+++ b/app/views/csi/surveys/show_reply.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
+
 
 <div class="lightBlue">
     <div class="page-title">
@@ -9,32 +9,31 @@
 </div>
 
 <div id="ep" class="detail-block page-block">
-        <div class="datatable">
-          <div class="yui3-widget yui3-datatable">
-            <div class="yui3-datatable-content">
-                <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-                  <thead class="yui3-datatable-columns">
-                    <tr class="yui3-datatable-first yui3-datatable-last">
-                      <th class="yui3-column" style="width:220px">
-                        <div class="yui3-datatable-liner"><%= t(:label_csi_survey_subject_title) %>
+        <div>
+          <div class="irm-datatable">
+                <table id='rows'>
+                  <thead>
+                    <tr >
+                      <th style="width:220px">
+                        <div ><%= t(:label_csi_survey_subject_title) %>
                         </div>
                       </th>
-                      <th class="yui3-column" style="width:180px;">
-                        <div class="yui3-datatable-liner"><%= t(:label_csi_survey_subject_result) %>
+                      <th style="width:180px;">
+                        <div><%= t(:label_csi_survey_subject_result) %>
                         </div>
                       </th>
                     </tr>
                   </thead>
-                  <tbody class="yui3-datatable-data">
+                  <tbody >
                   <% @survey_results.each do |result| %>
-                  <tr id="<%=result.id%>" class="yui3-datatable-even">
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                  <tr id="<%=result.id%>">
+                    <td>
+                      <div>
                         <%= result[:subject_name]%>
                        </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td>
+                      <div>
                         <%=result[:subject_result]%>
                       </div>
                     </td>
@@ -42,7 +41,6 @@
                   <% end -%>
                   </tbody>
                 </table>
-            </div>
           </div>
         </div>
 </div>
