--- a/app/views/icm/incident_requests/_search.html.erb
+++ b/app/views/icm/incident_requests/_search.html.erb
@@ -12,49 +12,48 @@
       </tbody>
     </table>
     <div class="lbBody">
-        <div class="datatable">
-          <div class="yui3-widget yui3-datatable">
-            <div class="yui3-datatable-content">
-                <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-                  <thead class="yui3-datatable-columns">
-                    <tr class="yui3-datatable-first yui3-datatable-last">
-                      <th class="yui3-column" style="width:40px">
-                        <div class="yui3-datatable-liner">#</div>
+        <div>
+          <div class="irm-datatable">
+                <table id='rows'>
+                  <thead>
+                    <tr>
+                      <th style="width:40px">
+                        <div>#</div>
                       </th>
-                      <th class="yui3-column" style="width:180px;">
-                        <div class="yui3-datatable-liner"><%= t(:label_icm_incident_request_title) %>
+                      <th  style="width:180px;">
+                        <div><%= t(:label_icm_incident_request_title) %>
                         </div>
                       </th>
-                      <th class="yui3-column" style="width:180px;">
-                        <div class="yui3-datatable-liner"><%= t(:label_icm_incident_request_organization) %>
+                      <th  style="width:180px;">
+                        <div ><%= t(:label_icm_incident_request_organization) %>
                         </div>
                       </th>
-                      <th class="yui3-column" style="width:180px;">
-                        <div class="yui3-datatable-liner"><%= t(:label_icm_incident_request_requested_by) %>
+                      <th  style="width:180px;">
+                        <div ><%= t(:label_icm_incident_request_requested_by) %>
                         </div>
                       </th>
                     </tr>
                   </thead>
-                  <tbody class="yui3-datatable-data">
+                  <tbody >
                   <% results.each do |r| %>
-                  <tr id="<%=r.id%>" class="yui3-datatable-even">
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                  <tr id="<%=r.id%>" >
+                    <td >
+                      <div >
                         <%= r[:request_number] %>
                        </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td >
+                      <div >
                           <%=link_to r[:title], {:controller => "icm/incident_journals", :action => "new", :request_id =>r[:id]}%>
                        </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td >
+                      <div>
                         <%=r[:organization_name]%>
                       </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td >
+                      <div >
                         <%=r[:requested_name]%>
                       </div>
                     </td>
@@ -62,7 +61,6 @@
                   <% end -%>
                   </tbody>
                 </table>
-            </div>
           </div>
         </div>
     </div>
