--- a/app/views/irm/delayed_jobs/icm_group_assign_monitor.html.erb
+++ b/app/views/irm/delayed_jobs/icm_group_assign_monitor.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
+
 <%= app_title %>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
@@ -22,39 +22,38 @@
         <% if @monitor.blank? %>
         <div style="font-size: 15px;"><%= t(:label_no_data) %></div>
          <% else %>
-        <div class="datatable">
-          <div class="yui3-widget yui3-datatable">
-            <div class="yui3-datatable-content">
-                <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-                  <thead class="yui3-datatable-columns">
-                    <tr class="yui3-datatable-first yui3-datatable-last">
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_icm_incident_request_request_number) %>
+        <div>
+          <div class="irm-datatable">
+                <table id='rows' >
+                  <thead>
+                    <tr >
+                      <th >
+                        <div><%= t(:label_icm_incident_request_request_number) %>
                         </div>
                       </th>
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_irm_group_show) %>
+                      <th>
+                        <div><%= t(:label_irm_group_show) %>
                         </div>
                       </th>
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_irm_delayed_jobs_record_run_at) %>
+                      <th>
+                        <div><%= t(:label_irm_delayed_jobs_record_run_at) %>
                         </div>
                       </th>
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_irm_delayed_jobs_record_end_at) %>
+                      <th>
+                        <div><%= t(:label_irm_delayed_jobs_record_end_at) %>
                         </div>
                       </th>
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_irm_delayed_jobs_record_status) %>
+                      <th>
+                        <div><%= t(:label_irm_delayed_jobs_record_status) %>
                         </div>
                       </th>
                     </tr>
                   </thead>
-                  <tbody class="yui3-datatable-data">
+                  <tbody>
                   <% @monitor.each do |log| %>
-                  <tr id="<%=log[:incident_request_id]%>" class="yui3-datatable-even">
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                  <tr id="<%=log[:incident_request_id]%>">
+                    <td>
+                      <div>
                         <% if allow_to_function?(:reply_incident_request) %>
                         <%= link_to log[:incident_request_number],
                                     :controller => "icm/incident_journals",
@@ -65,23 +64,23 @@
                         <% end %>
                       </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td>
+                      <div>
                         <%=log[:group_name]%>
                       </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td>
+                      <div>
                         <%=log[:run_at].strftime("%F %T") if log[:run_at]%>
                       </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td>
+                      <div>
                         <%=log[:end_at].strftime("%F %T") if log[:end_at]%>
                       </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td>
+                      <div>
                         <%=log[:job_status]%>
                       </div>
                     </td>
