--- a/app/views/irm/report_types/show.html.erb
+++ b/app/views/irm/report_types/show.html.erb
@@ -91,7 +91,7 @@
     </div>
 </div>
 
-<%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
+
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
@@ -111,27 +111,27 @@
       </div>
       <div class="pbBody">
         <div class="datatable">
-          <div class="yui3-widget yui3-datatable">
-            <div class="yui3-datatable-content">
-              <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-                <thead class="yui3-datatable-columns">
-                  <tr class="yui3-datatable-first yui3-datatable-last">
-                    <th class="yui3-column">
-                      <div class="yui3-datatable-liner"><%=t(:label_irm_report_type_usable_field_source)%></div>
+          <div class="irm-datatable">
+            <div>
+              <table id='rows' >
+                <thead>
+                  <tr>
+                    <th>
+                      <div><%=t(:label_irm_report_type_usable_field_source)%></div>
                     </th>
-                    <th class="yui3-column">
-                      <div class="yui3-datatable-liner"><%=t(:label_irm_report_type_usable_count)%></div>
+                    <th>
+                      <div><%=t(:label_irm_report_type_usable_count)%></div>
                     </th>
                   </tr>
                 </thead>
                 <tbody class="yui3-datatable-data">
                   <% report_type_fields(@report_type).each do |obj| %>
                     <tr class="yui3-datatable-even">
-                      <td class="yui3-column">
-                        <div class='yui3-datatable-liner'><%=obj[0]%></div>
+                      <td>
+                        <div><%=obj[0]%></div>
                       </td>
-                      <td class="yui3-column">
-                        <div class='yui3-datatable-liner'><%=obj[2]%></div>
+                      <td>
+                        <div><%=obj[2]%></div>
                       </td>
                     </tr>
                 <% end %>
