--- a/app/views/irm/todo_tasks/_top_data_table.html.erb
+++ b/app/views/irm/todo_tasks/_top_data_table.html.erb
@@ -2,17 +2,17 @@
 <div style="font-size: 15px;"><%= t(:label_no_data) %></div>
  <% else %>
 <div class="datatable">
-  <div class="yui3-widget yui3-datatable">
-    <div class="yui3-datatable-content">
-        <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-          <thead class="yui3-datatable-columns">
-            <tr class="yui3-datatable-first yui3-datatable-last">
-              <th class="yui3-column" style="width:220px">
-                <div class="yui3-datatable-liner"><%= t(:label_irm_todo_task_name) %>
+  <div class="irm-datatable">
+    <div>
+        <table id='rows' >
+          <thead>
+            <tr>
+              <th style="width:220px">
+                <div><%= t(:label_irm_todo_task_name) %>
                 </div>
               </th>
-              <th class="yui3-column" style="width:180px;">
-                <div class="yui3-datatable-liner"><%= t(:label_irm_todo_task_due_date) %>
+              <th style="width:180px;">
+                <div><%= t(:label_irm_todo_task_due_date) %>
                 </div>
               </th>
             </tr>
@@ -20,13 +20,13 @@
           <tbody class="yui3-datatable-data">
           <% tasks.limit(5).each do |task| %>
           <tr id="<%=task%>" class="yui3-datatable-even">
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                 <%=link_to task[:name], {:controller => "irm/todo_tasks", :action => "show", :id => task.id}%>
               </div>
             </td>
-            <td class="yui3-column">
-              <div class='yui3-datatable-liner'>
+            <td>
+              <div>
                 <%=task[:due_date].strftime("%F")%>
               </div>
             </td>
