--- a/app/views/skm/entry_headers/_search.html.erb
+++ b/app/views/skm/entry_headers/_search.html.erb
@@ -13,17 +13,17 @@
     </table>
     <div class="lbBody">
         <div class="datatable">
-          <div class="yui3-widget yui3-datatable">
-            <div class="yui3-datatable-content">
-                <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-                  <thead class="yui3-datatable-columns">
-                    <tr class="yui3-datatable-first yui3-datatable-last">
-                      <th class="yui3-column" style="width:180px;">
-                        <div class="yui3-datatable-liner"><%= t(:label_skm_entry_header_title) %>
+          <div class="irm-datatable">
+            <div>
+                <table id='rows' >
+                  <thead>
+                    <tr>
+                      <th style="width:180px;">
+                        <div><%= t(:label_skm_entry_header_title) %>
                         </div>
                       </th>
-                      <th class="yui3-column" style="width:180px;">
-                        <div class="yui3-datatable-liner"><%= t(:label_skm_entry_header_published_date) %>
+                      <th style="width:180px;">
+                        <div><%= t(:label_skm_entry_header_published_date) %>
                         </div>
                       </th>
                     </tr>
@@ -32,13 +32,13 @@
                   <% results.each do |r| %>
                   <tr id="<%=r.id%>" class="yui3-datatable-even">
 
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td>
+                      <div>
                           <%=link_to "[#{r[:doc_number]}]#{r[:entry_title]}", {:controller => "skm/entry_headers", :action => "show", :id =>r[:id]}%>
                        </div>
                     </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
+                    <td>
+                      <div>
                         <%=r[:published_date].strftime("%Y-%m-%d %H:%M:%S")%>
                       </div>
                     </td>
