--- a/app/views/slm/service_agreements/show.html.erb
+++ b/app/views/slm/service_agreements/show.html.erb
@@ -66,13 +66,11 @@
 
 <script type="text/javascript">
        function ShowHide(id,e){
-          GY.use("irm",function(Y){
-          if(e.checked){
-            Y.one('#'+id).setStyle("display","block");
+          if($(e).attr("checked")){
+              $('#'+id).css("display","block");
           }else{
-            Y.one('#'+id).setStyle("display","none");
+              $('#'+id).css("display","none");
           }
-          })
        }
 </script>
 
@@ -217,8 +215,8 @@
     </div>
 </div>
 <script type="text/javascript">
-  GY.use("cascadeselect",function(Y){
-     new Y.CascadeSelect({source: "#id_assignee_type",target:["#id_assignee"]});
+  $(function(){
+      $("#id_assignee_type").cascade("#id_assignee");
   });
 </script>
 
@@ -559,11 +557,11 @@
 </div>
 
 <script type="text/javascript">
-  GY.use("cascadeselect",function(Y){
-     new Y.CascadeSelect({source: "#id_assignee_type_first",target:["#id_assignee_first"]});
-     new Y.CascadeSelect({source: "#id_assignee_type_second",target:["#id_assignee_second"]});
-     new Y.CascadeSelect({source: "#id_assignee_type_third",target:["#id_assignee_third"]});
-     new Y.CascadeSelect({source: "#id_assignee_type_fourth",target:["#id_assignee_fourth"]});
+  $(function(){
+      $("#id_assignee_type_first").cascade("#id_assignee_first");
+      $("#id_assignee_type_second").cascade("#id_assignee_second");
+      $("#id_assignee_type_third").cascade("#id_assignee_third");
+      $("#id_assignee_type_fourth").cascade("#id_assignee_fourth");
   });
 </script>
 
