修正某些IE8，在不使用兼容性视图的时候，EXTJS表格出现标题和行对不齐的问题

--- a/public/themes/default/stylesheets/ext4-cux.css
+++ b/public/themes/default/stylesheets/ext4-cux.css
@@ -39,3 +39,7 @@
 .x-strict .x-ie7 .x-grid-header-row {
     position: inherit;
 }
+
+.x-strict .x-ie6 .x-grid-header-row {
+    position: inherit;
+}
