在事故单更多信息中显示系统字段

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -139,10 +139,10 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
+              <td class="label3Col"><label ><%=t(:label_icm_incident_request_target_system)%></label></td>
+              <td class="data3Col"><div><%= @incident_request[:external_system_name] %></div></td>
               <td class="label3Col"><label ><%=t(:label_icm_incident_request_service_code)%></label></td>
               <td class="data3Col"><div><%= @incident_request[:service_name] %></div></td>
-              <td class="label3Col empty">&nbsp;</td>
-              <td class="data3Col empty">&nbsp;</td>
               <td class="label3Col empty">&nbsp;</td>
               <td class="data3Col empty">&nbsp;</td>
             </tr>
