修正事故单回复页面上的应用知识库功能中的bug

--- a/app/views/icm/incident_journals/apply_entry_header.js.erb
+++ b/app/views/icm/incident_journals/apply_entry_header.js.erb
@@ -6,6 +6,7 @@
 <% else %>
     Ext.onReady(function(){
         Ext.getCmp("msgEditor").setValue("<%= escape_javascript(render("applyable_entry_header"))%>");
+        $("#msgEditor").val("<%= escape_javascript(render("applyable_entry_header"))%>");
         Ext.get("linktoSKM").addCls("hidden");
     });
 <%end%>
