--- a/public/themes/default/stylesheets/public.ie6.css
+++ b/public/themes/default/stylesheets/public.ie6.css
@@ -83,3 +83,5 @@ body .page-title .secondary-palette a, body .secondary-palette .lbHeader a, body
 }
 
 body .detail-block.page-block .pbBody .pbSubheader{background-color:transparent;}
+
+.screen_shot_frame{height:100%;width:100%;}
